--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(https://cdn.discordapp.com/attachments/1011866309455249420/1098696394618978384/341170703_6302595889761140_8457201401743480348_n.png);
+    background-image: url(../De-vuelta-a-casa/Assets/background.png);
     background-repeat: repeat;
 }
 * {
