--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../De-vuelta-a-casa/Assets/background.png);
+    background-image: url(./Assets/background.png);
     background-repeat: repeat;
 }
 * {
@@ -39,7 +39,7 @@ p {
 	font-size: 4rem;
 	font-weight: 300;
 	color: black;
-	margin-bottom: 10px;
+	margin-bottom: 50px;
 	text-transform: uppercase;
 	letter-spacing: 0.2rem;
 	text-align: center;
@@ -534,7 +534,7 @@ p {
 	font-size: 1.3rem;
 }
 /* End Footer */
-​
+
 /* Keyframes */
 @keyframes hamburger_puls {
 	0% {
