--- a/estilos.css
+++ b/estilos.css
@@ -22,11 +22,6 @@ a {
 	align-items: center;
 	justify-content: center;
 }
-img {
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-}
 p {
 	color: black;
 	font-size: 1.4rem;
@@ -34,6 +29,9 @@ p {
 	line-height: 2.5rem;
 	font-weight: 300;
 	letter-spacing: 0.05rem;
+}
+h1{
+	font-family: 'Viga', sans-serif;
 }
 .section-title {
 	font-size: 4rem;
@@ -53,7 +51,7 @@ p {
 	padding: 10px 30px;
 	color: white;
 	background-color: transparent;
-	border: 2px solid rgb(255, 238, 4);
+	border: 2px solid rgb(30, 150, 11);
 	font-size: 2rem;
 	text-transform: uppercase;
 	letter-spacing: 0.1rem;
@@ -63,7 +61,7 @@ p {
 }
 .cta:hover {
 	color: white;
-	background-color: rgb(244, 220, 8);
+	background-color: rgb(0, 147, 10);
 }
 .brand h1 {
 	font-size: 3rem;
@@ -251,7 +249,7 @@ p {
 	left: 0;
 	height: 100%;
 	width: 0;
-	background-color: rgb(251, 227, 9);
+	background-color: rgb(26, 129, 3);
 	animation: text_reveal_box 1s ease;
 	animation-delay: 0.5s;
 }
@@ -445,7 +443,7 @@ p {
 	top: 19px;
 	height: 98%;
 	width: 98%;
-	border: 7px solid rgb(255, 242, 0);
+	border: 7px solid rgb(59, 147, 5);
 	z-index: -1;
 }
 /* End About Section */
@@ -563,7 +561,7 @@ p {
 }
 @keyframes text_reveal_name {
 	100% {
-		color: rgb(255, 238, 6);
+		color: rgb(27, 145, 1);
 		font-weight: 500;
 	}
 }
