* Boilerplate Code cleanup

--- a/menu.css
+++ b/menu.css
@@ -20,7 +20,7 @@ html, body {
   align-items: center;
   justify-content: space-between;
   background-color: #00BAF0;
-  background: linear-gradient(to left, #c5f445, #615f5d);
+  background: linear-gradient(to left, #373832, #14ac53);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #FFF;
   height: 50px;
