--- a/estilos.css
+++ b/estilos.css
@@ -65,16 +65,22 @@ h1 {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-direction: column;
+	flex-direction: row;
 	width: 80%;
 	margin: 20px auto;
 	overflow: hidden;
 	border-radius: 10px;
 }
 
+@media only screen and (max-width: 768px) {
+	#projects .project-item {
+		flex-direction: column;
+	}
+}
+
 #projects .project-info {
 	padding: 30px;
-	flex-basis: 50%;
+	flex-basis: 35%;
 	height: 100%;
 	display: flex;
 	align-items: flex-start;
@@ -101,21 +107,11 @@ h1 {
 
 #projects .project-img {
 	flex-basis: 50%;
-	height: 300px;
+	height: 400px;
 	overflow: hidden;
 	position: relative;
 }
 
-#projects .project-img:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.7;
-}
 
 #projects .project-img img {
 	transition: 0.3s ease transform;
@@ -127,4 +123,3 @@ h1 {
 
 /* End Projects section */
 ​
-
