--- a/menu.css
+++ b/menu.css
@@ -25,6 +25,10 @@ html, body {
   color: #FFF;
   height: 50px;
   padding: 1em;
+  z-index: 30000;
+  position: fixed;
+  width: 100%;
+  margin-bottom: 20%;
 }
 
 .menu {
