--- a/estilos.css
+++ b/estilos.css
@@ -28,7 +28,7 @@ a {
 }
 
 p {
-	color: black;
+	color: rgb(255, 255, 255) ;
 	font-size: 1.4rem;
 	margin-top: 5px;
 	line-height: 2.5rem;
@@ -80,8 +80,8 @@ h1 {
 	align-items: flex-start;
 	justify-content: center;
 	flex-direction: column;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	color: white;
+    background-image: linear-gradient(60deg, #29323C 0%,#485563 100% );
+    color: rgb(255, 255, 255);
 }
 
 #projects .project-info h1 {
@@ -96,7 +96,7 @@ h1 {
 }
 
 #projects .project-info p {
-	color: white;
+	color: rgb(0, 255, 0);
 }
 
 #projects .project-img {
@@ -113,7 +113,7 @@ h1 {
 	top: 0;
 	height: 100%;
 	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+	background-image: linear-gradient(60deg, #29323C 0%, #485563 100%);
 	opacity: 0.7;
 }
 
@@ -126,5 +126,3 @@ h1 {
 }
 
 /* End Projects section */
-​
-
