--- a/menu.css
+++ b/menu.css
@@ -1,12 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Raleway);
-h2 {
-  vertical-align: center;
-  text-align: center;
-}
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+</style>
+  h2 {
+    vertical-align: center;
+    text-align: center;
+  }
 
 html, body {
   margin: 0;
   height: 100%;
+}
+.title {
+  font-family: 'Viga', sans-serif;
+    color: #000000;
 }
 
 * {
@@ -22,7 +29,7 @@ html, body {
   background-color: #00BAF0;
   background: linear-gradient(to left, #373832, #14ac53);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  color: #FFF;
+  color: #ffffff;
   height: 50px;
   padding: 1em;
   z-index: 30000;
@@ -62,7 +69,7 @@ html, body {
 .menu-button::before,
 .menu-button::after {
   display: block;
-  background-color: #fff;
+  background-color: #000000;
   position: absolute;
   height: 4px;
   width: 30px;
@@ -86,7 +93,7 @@ html, body {
 }
 
 #menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0);
+  background: rgb(0, 0, 0);
 }
 
 #menu-toggle:checked + .menu-button-container .menu-button::after {
@@ -116,7 +123,7 @@ html, body {
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
+    border: 1px solid #000000;
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -128,7 +135,7 @@ html, body {
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #222;
+    background-color: #000000;
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid #444;
