--- a/estilos.css
+++ b/estilos.css
@@ -40,7 +40,9 @@ h1 {
 	font-family: 'Viga', sans-serif;
 }
 
-
+h2{
+	color:white
+}
 
 /* Projects section */
 #projects .projects {
@@ -70,6 +72,9 @@ h1 {
 	margin: 20px auto;
 	overflow: hidden;
 	border-radius: 10px;
+	position: relative;
+    top: -80px;
+    left: -500px;
 }
 
 @media only screen and (max-width: 768px) {
@@ -86,7 +91,7 @@ h1 {
 	align-items: flex-start;
 	justify-content: center;
 	flex-direction: column;
-	background-image: linear-gradient(60deg, #ffffff 0%, #ffffff 100%);
+	background-image: linear-gradient(60deg, #29323C 0%, #485563 100%);
 	color: rgb(0, 0, 0);
 }
 
@@ -116,5 +121,5 @@ h1 {
 	position: relative;
 }
 
+
 /* End Projects section */
-​
