Ultimos cambios del Menu echo por Adrian (falta hacer la ventana de adopciones)

--- a/menu.css
+++ b/menu.css
@@ -51,6 +51,14 @@ html, body {
   overflow: hidden;
 }
 
+
+.menu a:link {
+  color: white;
+}
+.menu a:visited {
+  color: rgb(255, 255, 255);
+}
+
 .menu-button-container {
   display: none;
   height: 100%;
