--- a/estilos.css
+++ b/estilos.css
@@ -40,8 +40,8 @@ h1 {
 	font-family: 'Viga', sans-serif;
 }
 
-h2{
-	color:white
+h2 {
+	color: white
 }
 
 /* Projects section */
@@ -63,6 +63,10 @@ h2{
 	flex-direction: column;
 }
 
+.sales {
+	flex-direction: row !important;
+}
+
 #projects .project-item {
 	display: flex;
 	align-items: center;
@@ -73,13 +77,19 @@ h2{
 	overflow: hidden;
 	border-radius: 10px;
 	position: relative;
-    top: -80px;
-    left: -500px;
+	/* top: -80px;
+    left: -500px; */
+}
+
+
+.store img {
+	width: 800px;
+	height: 800px;
 }
 
 @media only screen and (max-width: 768px) {
 	#projects .project-item {
-		flex-direction: column;
+		flex-direction: column !important;
 	}
 }
 
