--- a/Estilosdona.css
+++ b/Estilosdona.css
@@ -38,93 +38,54 @@ p {
 
 h1 {
 	font-family: 'Viga', sans-serif;
+	color: #fcfcfc;
+}
+h2 {
+	font-family: 'Viga', sans-serif;
+	color: #fcfcfc;
+}
+h3 {
+color: red;
+}
+h4 {
+color: red;
 }
 
-
-
-/* Projects section */
-#projects .projects {
-	flex-direction: column;
-	max-width: 1200px;
-	margin: 0 auto;
-	padding: 100px 0;
-}
-
-#projects .projects-header h1 {
-	margin-bottom: 50px;
-}
-
-#projects .all-projects {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-}
-
-#projects .project-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	width: 80%;
-	margin: 20px auto;
-	overflow: hidden;
-	border-radius: 10px;
-}
-
-#projects .project-info {
-	padding: 30px;
-	flex-basis: 50%;
-	height: 100%;
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	color: white;
-}
-
-#projects .project-info h1 {
-	font-size: 4rem;
+button {
+	padding: 1.3em 3em;
+	font-size: 12px;
+	text-transform: uppercase;
+	letter-spacing: 2.5px;
 	font-weight: 500;
-}
-
-#projects .project-info h2 {
-	font-size: 1.8rem;
-	font-weight: 500;
-	margin-top: 10px;
-}
-
-#projects .project-info p {
-	color: white;
-}
-
-#projects .project-img {
-	flex-basis: 50%;
-	height: 300px;
-	overflow: hidden;
-	position: relative;
-}
-
-#projects .project-img:after {
-	content: '';
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
+	color: #000;
+	background-color: #fff;
+	border: none;
+	border-radius: 45px;
+	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+  }
+  
+  button:hover {
+	background-color: #00a000;
+	box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+	color: #fff;
+	transform: translateY(-7px);
+  }
+  
+  button:active {
+	transform: translateY(-1px);
+  }
+div {
+	display: block;
 	width: 100%;
-	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-	opacity: 0.7;
+	padding: 0px;
+	border: none;
+	box-sizing: content-box;
+	font-size: 1rem;
+	text-decoration: none;
+	background: rgb(0, 0, 255);
+	color: #000;
+
 }
-
-#projects .project-img img {
-	transition: 0.3s ease transform;
-}
-
-#projects .project-item:hover .project-img img {
-	transform: scale(1.1);
-}
-
-/* End Projects section */
-​
-
