--- a/Estilosdona.css
+++ b/Estilosdona.css
@@ -40,15 +40,18 @@ h1 {
 	font-family: 'Viga', sans-serif;
 	color: #fcfcfc;
 }
+
 h2 {
 	font-family: 'Viga', sans-serif;
 	color: #fcfcfc;
 }
+
 h3 {
-color: red;
+	color: red;
 }
+
 h4 {
-color: red;
+	color: red;
 }
 
 button {
@@ -65,18 +68,19 @@ button {
 	transition: all 0.3s ease 0s;
 	cursor: pointer;
 	outline: none;
-  }
-  
-  button:hover {
+}
+
+button:hover {
 	background-color: #00a000;
 	box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
 	color: #fff;
 	transform: translateY(-7px);
-  }
-  
-  button:active {
+}
+
+button:active {
 	transform: translateY(-1px);
-  }
+}
+
 div {
 	display: block;
 	width: 100%;
@@ -85,7 +89,29 @@ div {
 	box-sizing: content-box;
 	font-size: 1rem;
 	text-decoration: none;
-	background: rgb(0, 0, 255);
+	background: rgb(84, 125, 129);
 	color: #000;
+}
 
+.donation {
+	display: flex;
+	flex-direction: column;	
+	margin: auto;
+	width: 30%;
+	border: 3px solid rgb(242, 247, 242);
+	padding: 10px;	
+}
+
+.donation input{
+	width: 50%;
+}
+
+.donation h1{
+	margin-bottom: 10px;
+}
+
+.payment_form{
+	margin: auto;
+	width: 90%;		
+	margin-left: 28% !important;
 }
