--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(./Assets/background.png);
+	background-image: url(https://static.vecteezy.com/system/resources/previews/001/357/194/non_2x/green-grass-and-trees-photo.jpg);
 	background-repeat: repeat;
 }
 
@@ -41,7 +41,7 @@ h1 {
 }
 
 h2 {
-	color: white
+	color: rgb(0, 0, 0)
 }
 
 /* Projects section */
