Donaciones form  enhancements

--- a/Estilosdona.css
+++ b/Estilosdona.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(./Assets/background.png);
+	background-image: url(https://thumbs.dreamstime.com/b/fondo-seco-de-la-comida-perro-alimento-para-animales-124173068.jpg);
 	background-repeat: repeat;
 }
 
