cambios en el menu y fondo

--- a/menu.css
+++ b/menu.css
@@ -27,7 +27,7 @@ html, body {
   align-items: center;
   justify-content: space-between;
   background-color: #00BAF0;
-  background: linear-gradient(to left, #373832, #14ac53);
+  background: linear-gradient(to left, #373832, #77ca9a);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #ffffff;
   height: 50px;
