--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(https://static.vecteezy.com/system/resources/previews/001/357/194/non_2x/green-grass-and-trees-photo.jpg);
+	background-image: url(https://fondosmil.com/fondo/10224.jpg);
 	background-repeat: repeat;
 }
 
@@ -28,7 +28,7 @@ a {
 }
 
 p {
-	color: rgb(0, 0, 0);
+	color: rgb(255, 255, 255);
 	font-size: 1.4rem;
 	margin-top: 5px;
 	line-height: 2.5rem;
