--- a/index.css
+++ b/index.css
@@ -17,8 +17,6 @@ body {
 #introduccion {
   text-align: center;
   margin-bottom: 40px;
-  padding: 20px;
-  background-color: #f9f9f9;
 }
 
 #introduccion h1 {
@@ -47,6 +45,13 @@ body {
 
 .success-case {
   text-align: center;
+  width: 100%;
+}
+
+.all-projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .success-case h1 {
@@ -110,71 +115,4 @@ body {
   line-height: 1.5;
 }
 
-/* Estilos adicionales */
-.success-case-item.active .case-content {
-  display: block;
-}
 
-.success-case-item .case-content {
-  display: none;
-  padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  margin-top: 20px;
-}
-
-.success-case-item .case-content p {
-  font-size: 16px;
-  color: #777;
-  line-height: 1.5;
-}
-
-/* Estilos para el pop-up */
-.popup {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-}
-
-.popup-content {
-  max-width: 500px;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-  text-align: center;
-}
-
-.popup h3 {
-  font-size: 24px;
-  color: #333;
-  margin-bottom: 10px;
-}
-
-.popup p {
-  font-size: 16px;
-  color: #777;
-  line-height: 1.5;
-}
-
-.popup button {
-  padding: 10px 20px;
-  background-color: #555;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.popup button:hover {
-  background-color: #333;
-}
