--- a/Carousel.css
+++ b/Carousel.css
@@ -16,3 +16,17 @@
     width: 100%;
     height: auto;
   }
+  
+  h3 {
+    font-family: 'Castoro Titling', cursive;
+    font-family: 'Viga', sans-serif;
+  }
+  p {
+    font-family: 'Castoro Titling', cursive;
+    font-family: 'Viga', sans-serif;
+  }
+  p 
+  
+  img {
+    width:200px; height:40px; 
+  }
