--- a/estilos.css
+++ b/estilos.css
@@ -171,3 +171,14 @@ body {
       color: #777;
       line-height: 1.5;
     }
+
+	footer {
+		position: fixed;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		background-color: #333;
+		color: #fff;
+		text-align: center;
+		padding: 20px;
+	  }
