--- a/estilos.css
+++ b/estilos.css
@@ -1,73 +1,73 @@
 body {
 	background-image: url(https://fondosmil.com/fondo/10224.jpg);
 	background-repeat: repeat;
-  }
-  
-  * {
+}
+
+* {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-  }
-  
-  html {
+}
+
+html {
 	font-size: 10px;
 	font-family: 'Montserrat', sans-serif;
 	scroll-behavior: smooth;
-  }
-  
-  a {
+}
+
+a {
 	text-decoration: none;
-  }
-  
-  .container {
+}
+
+.container {
 	min-height: 100vh;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-  }
-  
-  p {
+}
+
+p {
 	color: rgb(255, 255, 255);
 	font-size: 1.4rem;
 	margin-top: 5px;
 	line-height: 2.5rem;
 	font-weight: 300;
 	letter-spacing: 0.05rem;
-  }
-  
-  h1 {
+}
+
+h1 {
 	font-family: 'Viga', sans-serif;
-  }
-  
-  h2 {
+}
+
+h2 {
 	color: rgb(0, 0, 0);
-  }
-  
-  /* Projects section */
-  #projects .projects {
+}
+
+/* Projects section */
+#projects .projects {
 	flex-direction: column;
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 100px 0;
-  }
-  
-  #projects .projects-header h1 {
+}
+
+#projects .projects-header h1 {
 	margin-bottom: 50px;
-  }
-  
-  #projects .all-projects {
+}
+
+#projects .all-projects {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-  }
-  
-  .sales {
+}
+
+.sales {
 	flex-direction: row !important;
-  }
-  
-  #projects .project-item {
+}
+
+#projects .project-item {
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -77,20 +77,20 @@ body {
 	overflow: hidden;
 	border-radius: 10px;
 	position: relative;
-  }
-  
-  .store img {
+}
+
+.store img {
 	width: 500px;
 	height: 500px;
-  }
-  
-  @media only screen and (max-width: 768px) {
+}
+
+@media only screen and (max-width: 768px) {
 	#projects .project-item {
-	  flex-direction: column !important;
+		flex-direction: column !important;
 	}
-  }
-  
-  #projects .project-info {
+}
+
+#projects .project-info {
 	padding: 30px;
 	flex-basis: 35%;
 	height: 100%;
@@ -100,74 +100,86 @@ body {
 	flex-direction: column;
 	background-image: linear-gradient(60deg, #29323C 0%, #ffffff 100%);
 	color: rgb(0, 0, 0);
-  }
-  
-  #projects .project-info h1 {
+}
+
+#projects .project-info h1 {
 	font-size: 4rem;
 	font-weight: 500;
-  }
-  
-  #projects .project-info h2 {
+}
+
+#projects .project-info h2 {
 	font-size: 1.8rem;
 	font-weight: 500;
 	margin-top: 10px;
-  }
-  
-  #projects .project-info p {
+}
+
+#projects .project-info p {
 	color: rgb(0, 0, 0);
-  }
-  
-  .food {
+}
+
+.food {
 	transform: scale(0.5);
-  }
-  
-  #projects .project-img {
+}
+
+#projects .project-img {
 	flex-basis: 50%;
 	height: 50px;
 	overflow: hidden;
 	position: relative;
-  }
-  
-  .project-item {
+}
+
+.project-item {
 	flex-basis: 100%;
 	max-width: 100%;
-  }
-  
-  @media (min-width: 576px) {
+}
+
+@media (min-width: 576px) {
 	.project-item {
-	  flex-basis: 50%;
-	  max-width: 50%;
+		flex-basis: 50%;
+		max-width: 50%;
 	}
-  }
-  
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
 	.project-item {
-	  flex-basis: 33.33%;
-	  max-width: 33.33%;
+		flex-basis: 33.33%;
+		max-width: 33.33%;
 	}
-  }
-  
-  @media (min-width: 1200px) {
+}
+
+@media (min-width: 1200px) {
 	.project-item {
-	  flex-basis: 25%;
-	  max-width: 25%;
+		flex-basis: 25%;
+		max-width: 25%;
 	}
-  }
-  
-  /* End Projects section */
-   /* Aquí van los estilos adicionales */
-    .success-case-item.active .case-content {
-      max-height: 1000px;
-    }
-  
-    .success-case-item .case-content {
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.3s ease;
-    }
-  
-    .case-content p {
-      font-size: 16px;
-      color: #777;
-      line-height: 1.5;
-    }
+}
+
+/* End Projects section */
+/* Aquí van los estilos adicionales */
+.success-case-item.active .case-content {
+	max-height: 1000px;
+}
+
+.success-case-item .case-content {
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.3s ease;
+}
+
+.case-content p {
+	font-size: 16px;
+	color: #777;
+	line-height: 1.5;
+}
+
+
+footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	background-color: #333;
+	color: #fff;
+	text-align: center;
+	padding: 20px;
+}
