--- a/estilos.css
+++ b/estilos.css
@@ -183,3 +183,8 @@ footer {
 	text-align: center;
 	padding: 20px;
 }
+
+#map {
+	width: 100%;
+	height: 400px; /* Ajusta la altura según tus necesidades */
+  }
