solucion de footer

--- a/Carousel.css
+++ b/Carousel.css
@@ -24,7 +24,7 @@
     text-shadow: 1px 1px 2px black;
   }
   
-  p {
+  .title {
     font-family: 'Castoro Titling', cursive;
     font-family: 'Viga', sans-serif;
     text-shadow: 1px 1px 2px black;
