--- a/estilos.css
+++ b/estilos.css
@@ -188,3 +188,9 @@ footer {
 	width: 100%;
 	height: 400px; /* Ajusta la altura según tus necesidades */
   }
+
+  .btn-donar {
+	font-size: 20px; /* Ajusta el tamaño de fuente a tu preferencia */
+	padding: 5px 20px; /* Ajusta el relleno superior/inferior y izquierdo/derecho según sea necesario */
+  }
+  
